--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "rc-tween-one": "^2.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-scroll-parallax": "^2.1.2",
     "react-simple-img": "^2.3.1",
     "react-transition-group": "^4.1.1"
   },
